fixed text clipping under jump button in action-list-container

--- a/src/client/styles/DiffItem.scss
+++ b/src/client/styles/DiffItem.scss
@@ -1,9 +1,2 @@
 @import './_Themes.scss';
 
-.diff-item {
-  color: var(--black);
-  margin: 5px;
-  border: 1px solid var(--light-medium-grey);
-  padding: 1rem 0.5rem;
-  border-radius: 2px;
-}
